--- a/課程筆記/1051 - 20161012 - 課程筆記.markdown
+++ b/課程筆記/1051 - 20161012 - 課程筆記.markdown
@@ -22,12 +22,15 @@
 * 若觀察者 0' 以速度 $$ \overrightarrow{V_{0'0}} $$ 對另一觀察者 0 運動，它們所觀察到(missed)
 
 ### 範例：觀察者 O 在路旁觀察到汽車 $$ V_{汽O} = 50 ^{km}/{hr.} $$、公車 $$ V_{公O} = 20 ^{km}/_{hr.} $$。觀察者 O' 在公車上觀察，求觀察者 O' 觀察到汽車的速率
+(missed)
 
-### 範例：一船朝北以相對河水 $$ 10.0 ^{km}/_h $$ 之速度過河，河水以對地面 5.00 ^{km}/_h 之速率朝東流。河邊一靜止觀察者所測量到之船的速度為何？
+### 範例：一船朝北以相對河水 $$ 10.0 ^{km}/_h $$ 之速度過河，河水以對地面 $$ 5.00 ^{km}/_h $$ 之速率朝東流。河邊一靜止觀察者所測量到之船的速度為何？
 * (note10312)
 * $$ \overrightarrow{V_{boatE}} = \sqrt{{V_{bW}}^2 + {V_{NE}}^2 } $$
 * $$\theta = tan^{-1}(\frac{V_{WE}}{V_{bW}}) = tan^{-1}( \frac{5.0}{10.0}) = 26.5 度 $$
 * 朝北向東 26.5 度
 
 ## 第 21 章 - 電學基本介紹
+* 下次小考考庫侖定律的應用
 
+### 電力<br>Electric Forces
