Update 課程筆記/1051 - 20161012 - 課程筆記.markdown

--- a/課程筆記/1051 - 20161012 - 課程筆記.markdown
+++ b/課程筆記/1051 - 20161012 - 課程筆記.markdown
@@ -48,4 +48,31 @@
 * 同性電荷相斥(repel)，異性電荷相吸(attract)
   * 應用：影印機將碳粉帶正電荷、要印的表面使之帶負電荷，並施以高溫將兩者合併
 
+### 物質導電特性
+#### 導體<br>Conductor
+電荷在其內可相當自由地移動的物質，像金屬、自來水
+
+#### 非導體<br>Insulator
+* 像橡膠、玻璃
+* 也稱絕緣體
+
+#### 半導體
+* 導電性介於導體和非導體之間的物質
+* 如用於晶片的矽(silicon)、鍺(germanium?)
+
+#### 超導體<br>Super Conductor
+完美導體的物質，可允許電荷不受任何阻礙的移動
+
+### Charging by Induction
+* 把原本電中性的東西利用誘導帶電
+* (note 1133)
+
+### 接地<br>Grounded
+* 物體與地面之間用導體構成導電路徑的過程
+* (note 1135)
+* 應用：(missed)
+
+
+* 原子郵袋正電的質子(proton)與帶負電的電子
+
 ### 電力<br>Electric Forces
