--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -1,4 +1,15 @@
 # 20161019 上課筆記
-## 電場
+## 電流
 * 電流被想像成連續的流體，如：水、空氣之流體
-* 
+* 電流乃由許多某種電荷所構成的不連續體，任何可測得之正殿或負電荷 $$ q $$
+  * $$ q = ne (n = 1, 2, 3, \cdots)$$
+  * (missed)
+* 電子與質子電量大小皆為 $$ e $$
+
+| 粒子名稱 | 符號 | 電荷 |
+| -- | -- | -- |
+| 電子 | $$ e $$ | $$ -e $$ |
+| 質子 | $$ p $$ | $$ +e $$ |
+| 中子 | $$ n $$ | $$ 0 $$ |
+
+* 粒子可能不帶電或帶 $$+10e$$ 或 $$-6e$$ 的電量，但找不到帶 $$3.85e$$ 電量的粒子
