--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -13,3 +13,26 @@
 | 中子 | $$ n $$ | $$ 0 $$ |
 
 * 粒子可能不帶電或帶 $$+10e$$ 或 $$-6e$$ 的電量，但找不到帶 $$3.85e$$ 電量的粒子
+
+### 範例
+#### (a)相距 $$ 4.0 \times 10^{-15}m $$ 的兩個質子間靜電斥力大小為何？
+$$ F = \frac{1}{4\pi \epsilon_0} \frac{e^2}{r^2}\\
+      = 8.99 \times 10^9 {^{N\cdot m^2}/_{c^2}} (missed) $$
+
+#### (b)兩質子間的重力大小為何？
+$$ F = G \frac{m_P m_P}{r^2} = 6.67 \times 10^{-11} {^{N \cdot m^2}/_{{kg}^2}} \frac{(1.67 \times 10^{-17}kg)^2}{(4.0 \times 10^{-15}m)^2} \\ = 1.2 \times 10^{-35} N $$
+
+強核力的巨大力量讓質子(?)可以維持在一起
+
+## 電場<br>Electric Field
+* 電場：每個電荷都會在其周圍建立一個電場
+* 電場是向量
+* $$ \overrightarrow{E} = \frac{\overrightarrow{F}}{q_{test}} $$
+* \picture{1004}
+* 測試電荷(missed)
+
+### 電場線
+* 電場線並非真實存在的線
+* 電場線與電場向量間的關係：
+  1. 在任一點直線形場線方向或曲線形場線的電場線切線方向為該點電場方向
+  2. 電場線垂直的單位面積，所包場線的數目與該處電場 $$ \overrightarrow{E} $$ 的大小成正比
