--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -36,3 +36,4 @@ $$ F = G \frac{m_P m_P}{r^2} = 6.67 \times 10^{-11} {^{N \cdot m^2}/_{{kg}^2}} \
 * 電場線與電場向量間的關係：
   1. 在任一點直線形場線方向或曲線形場線的電場線切線方向為該點電場方向
   2. 電場線垂直的單位面積，所包場線的數目與該處電場 $$ \overrightarrow{E} $$ 的大小成正比
+* \picture{1024}
