--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -49,3 +49,7 @@ q_{test}：測試電荷 $$
 
 #### 範例：三個距離原點皆為 $$ d $$ 的粒子，$$ q_1 = +2Q $$、$$ q_2 = -2Q $$、$$ q_3 = -4Q $$，原點處的淨電場為何？
 * \picture{1036}
+* $$ \mid \overrightarrow{E_1} \mid = \frac{1}{4 \pi \epsilon_0} \frac{2Q}{d^2} $$
+* $$ \mid \overrightarrow{E_2} \mid = (missed) $$
+* $$ (missed) $$
+* $$ E = 2 E_{3x} = 2 E_3 cos{30\deg} $$_
