--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -78,3 +78,6 @@ q_{test}：測試電荷 $$
 | $$ \psi $$ | psi | 
 | $$ \omega $$ | omega |
 
+### 帶電圓環所產生的電場
+* \picture{1056}
+* 半徑為 $$ R $$ 且帶正均勻線電荷密度為 $$ \lambda $$ 的細圓環，則在圓環中心軸上與圓環平面距離為 $$ Z $$ 之 $$ P $$ 點處的電場為何？
