--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -101,5 +101,7 @@ $$ E = \frac{Q}{4\pi\epsilon_0}\frac{1}{Z^2} $$
 1. 利用對稱性 y 軸方向分量抵銷， $$ dE_x = dE\cos \theta = \frac{1}{4\pi\epsilon_0}\frac{\lambda ds}{r^2}\cos \theta $$ 有兩個變數，消除其中一個變數
 2. $$ ds = r d \theta $$
 3. $$ E = \int dE_x = \int_{-60^{\circ}}^{60^{\circ}} \frac{1}{4\pi\epsilon_0} \frac{\lambda}{r^2} \cos \theta r d\theta\\
-= \frac{\lambda}{}(missed \picture{1143}) $$
-1. 
+= \frac{\lambda}{}(missed \picture{1143}) \\= \frac{1.73 \lambda}{4\pi \epsilon_0 r} $$
+1. $$ \lambda = \frac{Q}{l} = \frac{Q}{2\pi r \times \frac{1}{3}} = \frac{0.477Q}{r} $$
+2. $$ E = \frac{1.73}{4\pi\epsilon_0 r} (\frac{0.477 Q}{r})$$
+
