--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -105,3 +105,4 @@ $$ E = \frac{Q}{4\pi\epsilon_0}\frac{1}{Z^2} $$
 1. $$ \lambda = \frac{Q}{l} = \frac{Q}{2\pi r \times \frac{1}{3}} = \frac{0.477Q}{r} $$
 2. $$ E = \frac{1.73}{4\pi\epsilon_0 r} (\frac{0.477 Q}{r})$$
 
+## 第 22 章 - 高斯定律
