--- a/課程筆記/20161019 課程筆記.markdown
+++ b/課程筆記/20161019 課程筆記.markdown
@@ -106,3 +106,9 @@ $$ E = \frac{Q}{4\pi\epsilon_0}\frac{1}{Z^2} $$
 2. $$ E = \frac{1.73}{4\pi\epsilon_0 r} (\frac{0.477 Q}{r})$$
 
 ## 第 22 章 - 高斯定律
+### 通量<br>Flux
+* 語源：希臘  
+語意：flow
+* 瞄準一截面積為 A 之正方形環，氣體之速度為均勻速度 $$\overrightarrow{V} $$。  
+$$ \Phi $$ 表示氣體通過此環的體積流速（單位時間通過該截面積的體積），即通量
+* \picture{1158}
