--- a/課程筆記/20161116_note.markdown
+++ b/課程筆記/20161116_note.markdown
@@ -1,2 +1,15 @@
 # 20161116 note
-## 
+## 平行板電容器
+* $$ E = \frac{\sigma}{\epsilon_0} = \frac{Q}{A} \\
+  \sigma : 面電荷密度 $$
+* $$ \Delta V = E \cdot d = \frac{Q}{A \epsilon_0} \cdot d\\
+= - \int^f_i \overrightarrow{E} \cdot d \overrightarrow{s} \\
+= E \cdot d $$
+* $$ q = C \cdot \Delta V\\
+C = \frac{q}{\Delta V} = \frac{Q}{\frac{Q \cdot d}{A \epsilon_0}} = \frac{\epsilon_0 A}{d} \\
+A：平行板面積\\
+d：兩板之距離 $$
+* 
+  * 出現電位差後原本電中性的平行板開始帶正 / 負電荷
+  * 剛開始充電時電子很容易移動，但隨著平行板的電位差大小逐漸接近電源提供的電位差會越來越慢，最後平行板跟電源電位差大小相同時停止充電
+  * （老師）電場驅使電子由電容器的極板 $$ h $$ 移動到電池的正極，極板失去電子而帶正電
