--- a/課程筆記/20161116_note.markdown
+++ b/課程筆記/20161116_note.markdown
@@ -9,7 +9,7 @@
 C = \frac{q}{\Delta V} = \frac{Q}{\frac{Q \cdot d}{A \epsilon_0}} = \frac{\epsilon_0 A}{d} \\
 A：平行板面積\\
 d：兩板之距離 $$
-* 
+* ![圖例](IMG_20161116_101946.jpg)
   * 出現電位差後原本電中性的平行板開始帶正 / 負電荷
   * 剛開始充電時電子很容易移動，但隨著平行板的電位差大小逐漸接近電源提供的電位差會越來越慢，最後平行板跟電源電位差大小相同時停止充電
-  * （老師）電場驅使電子由電容器的極板 $$ h $$ 移動到電池的正極，極板失去電子而帶正電
+  * 電場驅使電子由電容器的極板 $$ h $$ 移動到電池的正極，極板失去電子而帶正電
