--- a/課程筆記/20161116_note.markdown
+++ b/課程筆記/20161116_note.markdown
@@ -15,3 +15,16 @@ d：兩板之距離 $$
   * 出現電位差後原本電中性的平行板開始帶正 / 負電荷
   * 剛開始充電時電子很容易移動，但隨著平行板的電位差大小逐漸接近電源提供的電位差會越來越慢，最後平行板跟電源電位差大小相同時停止充電
   * 電場驅使電子由電容器的極板 $$ h $$ 移動到電池的正極，極板失去電子而帶正電
+
+## 電容器的並聯、串聯<br>Capacitor's Series Combination and Parallel Combination
+* 並聯時電位差皆相同，電容器中儲存的總電荷 $$ q $$ 是個別電容器中之電荷總和
+* $$ q_1 = C_1 V\\
+q_2 = C_2 V \\
+q_3 = C_3 V
+$$
+* $$ 
+\begin{align}
+  q &= q_1 + q_2 + q_3\\
+  &= (C_1 + C_2 + C_3)V
+\end{align}
+$$
