--- a/課程筆記/1051 - 20161012 - 課程筆記.markdown
+++ b/課程筆記/1051 - 20161012 - 課程筆記.markdown
@@ -26,7 +26,7 @@
 
 ### 範例：一船朝北以相對河水 $$ 10.0 ^{km}/_h $$ 之速度過河，河水以對地面 $$ 5.00 ^{km}/_h $$ 之速率朝東流。河邊一靜止觀察者所測量到之船的速度為何？
 * (note10312)
-*  \overrightarrow{V_{boatE}} = \sqrt{{V_{bW}}^2 + {V_{NE}}^2 } 
+* $$\overrightarrow{V_{boatE}} = \sqrt{V_{bW}^2 + {V_{NE}}^2 } $$
 * $$\theta = tan^{-1}(\frac{V_{WE}}{V_{bW}}) = tan^{-1}( \frac{5.0}{10.0}) = 26.5 度 $$
 * 朝北向東 26.5 度
 
