--- a/課程筆記/20161116_note.markdown
+++ b/課程筆記/20161116_note.markdown
@@ -32,6 +32,8 @@ $$
 ## 期中考檢討
 ### 14.
 * $$ \epsilon_0 \Phi = q \\
-\Phi ：總電通量\\
-q : 總電量$$
-* $$ E = \frac{1}{4 \pi \epsilon_0} \frac{q}{r^2} $$
+\Phi ：總電通量 = E \times A\\
+q : 總電量\\
+E = \frac{1}{4 \pi \epsilon_0} \frac{q}{r^2} $$
+* 雖然電通量跟電場與面積有關，但是電荷不變電通量依然不變
+* 答案： $$-320 {^{N \cdot m^2} / _C} $$
