Update 課程筆記/20161123 上課筆記/20161123 上課筆記.markdown

--- a/課程筆記/20161123 上課筆記/20161123 上課筆記.markdown
+++ b/課程筆記/20161123 上課筆記/20161123 上課筆記.markdown
@@ -1,2 +1,42 @@
 # 20161123 上課筆記
+## 電容中的能量
+### 電容器充電
+* (photo 1030)
+* 電荷 $$ q' $$ 自一極板移至另一極板，此時兩極板間之電位差 $$ V' $$ 為 $$ \frac{q'}{C} $$
+* 欲再轉移 $$ dq' $$ 的額外電荷至極板  
+$$ dW = V'dq' = \frac{q'}{C} dq'\\ （額外資訊： V' 指向 q'，photo 1035）$$
+* (missed)
+* 以位能的形式儲存在電容器中  
+$$ U = \frac{q^2}{2C} $$
+* (photo 1040)
+* 當電容器給予的電位差過大時會在介質間形成通路造成電荷穿透，故無法無窮持續提高電位差（且可能會燒毀部份介電質）
 
+### 介電質
+* 為用來填充電容器兩極板間空間的不導電物質
+* 介電質可為多種不導電的物質
+* 介電質的加入可以讓電容器保存更多電荷
+* 另外對於極板間距過近的電容器介電質的使用亦能發揮阻隔兩極板避免意外形成短路的問題
+
+### 介電常數<br>Dieletric Constant
+* 以 $$ k $$ 來標示之
+* 不同物質介電常數不同
+* (missed 物質介電常數參考表：真空、空氣）
+* 使用 $$ k $$ 介電常數的物質作為介電質(?)，電容器的電容質會增加 $$ k $$ 倍
+* 介電質替兩極板間所能承受的電位差設一上限值 $$ V_{max} $$，崩壞電位(breakdown potential)
+* 崩壞電位為乾燥空氣： $$ 3 \times 10^6 {^{V}/_{m}} $$
+* $$ k \epsilon_0 = \epsilon $$
+
+#### 範例：一平行板電容器 $$ C = 5.0 pF $$ 兩極板間以電池施加電位差 $$ V = 12.0V $$ 進行充電，當充電用的電池移走後，在兩極板間插入一 $$ k $$ 介電常數為 6.50 的瓷板。
+##### (a)在插入瓷板前位能為多少？
+###### 解決方案
+$$ \begin{align}
+U_1 = \frac{q^2}{2C} &= \frac{(CV)^2}{2C} = \frac{1}{2}CV^2 \\
+&= \frac{1}{2} (5.0 \times 10^{-12}F)(12.0V)^2\\
+&= 3.60 \times 10^{-10} (? photo 1059)
+\end{align} $$
+
+##### (b)在插入瓷板後位能為多少？
+$$ \begin{align}
+U_f = \frac{q^2}{2C_k} = \frac{q^2}{2C\cdot k}= \frac{U_i}{k} &= \frac{3.6\times 10^{10} (?)}{6.50}\\
+&= 5.54 \times 10^{-11} J 
+\end{align}$$
