Update 課程筆記/20161123 上課筆記/20161123 上課筆記.markdown

--- a/課程筆記/20161123 上課筆記/20161123 上課筆記.markdown
+++ b/課程筆記/20161123 上課筆記/20161123 上課筆記.markdown
@@ -21,7 +21,13 @@ $$ U = \frac{q^2}{2C} $$
 ### 介電常數<br>Dieletric Constant
 * 以 $$ k $$ 來標示之
 * 不同物質介電常數不同
-* (missed 物質介電常數參考表：真空、空氣）
+
+| 介電質 | 介電常數 $$ k $$ | 
+| :---: | :---: |
+| 真空 | 1 |
+| 空氣 | 1.00054 | 
+| 耐熱玻璃 | 4.7 |
+
 * 使用 $$ k $$ 介電常數的物質作為介電質(?)，電容器的電容質會增加 $$ k $$ 倍
 * 介電質替兩極板間所能承受的電位差設一上限值 $$ V_{max} $$，崩壞電位(breakdown potential)
 * 崩壞電位為乾燥空氣： $$ 3 \times 10^6 {^{V}/_{m}} $$
@@ -73,3 +79,18 @@ E_Z = - \frac{\partial V}{\partial Z} &= - \frac{1}{4 \pi \epsilon_0} Q \frac{d}
 &= - \frac{1}{4 \pi \epsilon_0} Q (-\frac{1}{2})(Z^2 + R^2)^{-\frac{3}{2}}(2Z) \\
 &= \frac{1}{4 \pi \epsilon_0}Q \frac{Z}{(\sqrt{Z^2 + R^2})^{\frac{3}{2}}}
 \end{align} $$
+
+## 第 25 章
+### (missed)
+* picture 1153
+* $$ I = \frac{Q}{t}\\
+安培(Ampere) = \frac{庫侖(Coulumb)}{秒(sec.)} $$
+* 1 安培真空中兩相距 1 m 無限平行的導體，固定電流對其產生一力 = $$ 2 \times 10^{-7} {^N / _m} $$
+* $$ I = n e V_d A \\
+Q = n A L e$$
+  * $$ n $$：每單位體積的載子數
+    * 載子：一個可以運輸電荷的東西
+  * $$ A $$：截面積
+  * $$ L $$：長度
+  * $$ e $$：載子的單位電量
+  * $$ V_d $$：飄移速度(drift speed)
