--- a/課程筆記/20161130/README.markdown/20161130_note.markdown
+++ b/課程筆記/20161130/README.markdown/20161130_note.markdown
@@ -19,3 +19,15 @@
 $$
 \frac{Volt}{Amp} = Ohm
 $$
+
+### 電阻跟物質的長度、截面積還有物質本身的電阻率($$\rho$$)有關
+* SI Unit of $$ \rho $$: $$ Ohm-m $$
+* 表 25-1 - $$ \rho $$, at 20度C
+* By experiment...(missed, recorded 1012)
+
+#### 例題：銅的電阻率 $$ \rho = 1.7 \times 10^{-8} \Omega \cdot m $$，find $$ R $$ of a Cu 線 $$ L = 1m $$、$$ A = 1 \mu m^2 = 10^{-6}m^2 $$
+$$ \begin{align} 
+R = \rho \frac{L}{A} &= 1.7 \times 10^{-8} \Omega \cdot m \frac{1m}{10^{-6}m^2} \\
+&= 1.7 times 10^{-12} \Omega = 0.017 \Omega
+\end{align}
+$$
