--- a/課程筆記/20161130/README.markdown/20161130_note.markdown
+++ b/課程筆記/20161130/README.markdown/20161130_note.markdown
@@ -39,3 +39,33 @@ R = \rho \frac{L}{A} &= 1.7 \times 10^{-8} \Omega \cdot m \frac{1m}{10^{-6}m^2} 
 &= 1.7 \times 10^{-12} \Omega = 0.017 \Omega
 \end{align}
 $$
+
+## $$ R $$ 與 $$ \rho $$ 因溫度改變
+* 經由實驗得知： $$ \frac{\Delta \rho}{\rho_{0_{20℃}}} = \alpha \Delta T $$
+* (missed)
+
+### 例題：find $$ \rho $$ of Cu at $$ T = 120℃ $$<br>$$\rho_0 (20℃) = 1.7 \times 10^{-8} \Omega \cdot m$$<br>$$\alpha = 3.9 \times 10^{-3} {^1}/{_℃}$$
+* $$ \begin{align}
+\rho &= 1.7 \times 10^{-8} (1 + 3.9 \times 10^{-3} \times 100) \\
+&= 1.7 \times 10^{-8} (1 + 0.39)\\
+&= \missed{photoed 1039} 
+\end{align}$$
+
+### 電導<br>Cunductivity
+* $$ \missed{recorded 1040} $$
+
+#### 特殊導體 - 超導體
+* 導體物質在低於某臨界溫度($$ T_c $$, critical temperature)時沒有電阻
+* \missing{photo 1043}
+* 範例：Y、Ba、Cu_3O_7、YBCO(Yttrium)
+
+### 電阻條紋
+
+## DC circuit with resister
+* 固態金屬正粒子無法移動，故電流為由電子流移動組成
+* \missed{recorded 1102}
+
+* 功率：$$ {^{work}/_{time}} $$
+* $$ P = \frac{work}{time} = \frac{Q}{t} V = I \cdot V $$
+* $$ P = IV $$ 或 $$ V = IR $$
+* $$ P = I^2R = \frac{V^2}{R} = IV $$
